option java_package = "com.chuangyou.common.protobuf.pb.soul";
option java_outer_classname = "SoulInfoProto";

message SoulInfoMsg{

	required int64 exp=1;//'经验值',
	required int32 card1=2;// 身上装备的card1--8
	required int32 card2=3;
	required int32 card3=4;
	required int32 card4=5;
	required int32 card5=6;
	required int32 card6=7;
	required int32 card7=8;
	required int32 card8=9;

	required int32 fuseSkillId1=10;//融合技能 1--4
	required int32 fuseSkillId2=11;
	required int32 fuseSkillId3=12;
	required int32 fuseSkillId4=13;

	required int64 fuseSkillCreateTime1=14;// 融合技能 1--4 创建时间
	required int64 fuseSkillCreateTime2=15;
	required int64 fuseSkillCreateTime3=16;
	required int64 fuseSkillCreateTime4=17;

	required int32 proficiency = 18; //制作熟悉度

}